Fixed Collapsed Nav padding

--- a/src/components/nav/nav.less
+++ b/src/components/nav/nav.less
@@ -1,3 +1,5 @@
+@import '../home/home';
+
 
 a { color: #000; }
   
@@ -129,5 +131,9 @@ a { color: #000; }
       .menuIcon {
         display: none;
       }
+    }
+
+    @media @phone-down {
+      li a { padding: 10px 30px; }
     }
 }  
